hand evaluation fixes